Change sections to divs

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<main class="wrapper">
-		<section class="search">
+		<div class="search">
 			<input id="searchBox" type="text" placeholder="Search">
-		</section>
+		</div>
 
-		<section class="gallery">
+		<div class="gallery">
 
 			<a href="photos/01.jpg" data-fancybox="gallery" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
 				<img src="photos/thumbnails/01.jpg" alt="Hay Bales" />
@@ -53,7 +53,7 @@
 				<img src="photos/thumbnails/12.jpg" alt="Bluebells" />
 			</a>
 
-		</section>
+		</div>
 	</main>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
